@@ -33,7 +33,6 @@ EmfControlPanel.FullRadioButton            =Full field
 EmfControlPanel.CurveVectorsRadioButton    =Curve with vectors
 EmfControlPanel.CurveRadioButton           =Curve
 EmfControlPanel.NoneRadioButton            =None
-EmfControlPanel.SingleLineOfVectors        =Vectors
 EmfControlPanel.ShowCurve                  =Show curve
 EmfControlPanel.StripChartCheckBox         =Electron positions
 EmfControlPanel.StaticFieldRadioButton     =Static field
@@ -53,4 +52,3 @@ EmfControlPanel.FrequencyLabel             =Frequency
 EmfControlPanel.AmplitudeLabel             =Amplitude
 EmfControlPanel.LegendBorder               =Legend
 EmfControlPanel.ElectronLabel              =Electron
-EmfControlPanel.ScalarRep                  =Scalar
